# eidolon

./: .gitignore  CMakeLists.txt  README.md
Eidolon/: CMakeLists.txt  Eidolon.cpp  Eidolon.h  Imagery.cpp  Imagery.h
